Refactor code structure for improved readability and maintainability

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ pnpm-debug.log*
 # environment variables
 .env
 .env.production
+.env.local
+
+# telegram session
+telegram_session.txt
 
 # macOS-specific files
 .DS_Store
