--- a/package.json
+++ b/package.json
@@ -1,20 +1,48 @@
 {
   "name": "teleguard",
-  "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "description": "Backend para bot de Telegram con gestión de suscripciones",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc && astro build",
+    "start": "node dist/server.js",
+    "vercel-build": "tsc && astro build",
+    "create:admin": "tsx src/scripts/create-admin.ts",
+    "dev:astro": "astro dev",
+    "build:astro": "astro build",
+    "preview": "astro preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.15.3",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "mongoose": "^8.19.3",
-    "tailwindcss": "^4.1.16"
+    "dotenv": "^16.4.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "input": "^1.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "node-cron": "^3.0.3",
+    "qrcode-terminal": "^0.12.0",
+    "tailwindcss": "^4.1.16",
+    "telegram": "2.25.11"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.10.0",
+    "@types/node-cron": "^3.0.11",
+    "@types/qrcode-terminal": "^0.12.2",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
